...
                // Reconnect Button
                Button(
                    onClick = onReconnect,
                    shape = MaterialTheme.shapes.medium
                ) {
                    Text(
                        text = "reconnect",
                        fontFamily = FontFamily.Monospace,
                        fontWeight = FontWeight.Bold,
                        fontSize = 14.sp,
                        textAlign = TextAlign.Center
                    )
                }
...
                // Main Menu Button
                Button(
                    onClick = onNavigateToMainMenu,
                    shape = MaterialTheme.shapes.medium
                ) {
                    Text(
                        text = "Main Menu",
                        fontFamily = FontFamily.Monospace,
                        fontWeight = FontWeight.Bold,
                        fontSize = 14.sp,
                        textAlign = TextAlign.Center
                    )
                }
...
